<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="412dp"
    android:layout_height="112dp"
    android:layout_marginTop="20dp"
    android:background="@color/colorAccent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:id="@+id/contactItem">

    <TextView
        android:id="@+id/contactName"
        android:layout_width="268dp"
        android:layout_height="38dp"
        android:layout_alignTop="@+id/contactImage"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/contactImage"
        android:background="@color/gray"
        android:text="@string/contact_name"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/contactImage"
        app:layout_constraintTop_toTopOf="@+id/contactImage" />

    <TextView
        android:id="@+id/contactNumber"
        android:layout_width="268dp"
        android:layout_height="26dp"
        android:layout_below="@+id/contactName"
        android:layout_alignStart="@+id/contactName"
        android:layout_alignBottom="@+id/contactImage"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:background="@color/gray"
        android:text="@string/contact_phone"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/contactName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/contactName"
        app:layout_constraintTop_toBottomOf="@+id/contactName" />

    <ImageView
        android:id="@+id/contactImage"
        android:layout_width="80dp"
        android:layout_height="86dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/avatar_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />
</androidx.constraintlayout.widget.ConstraintLayout>