<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contactList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <RelativeLayout
        android:id="@+id/contactItem"
        android:layout_width="412dp"
        android:layout_height="112dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/contactName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/contactImage"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@+id/contactImage"
            android:background="@color/gray"
            android:text="@string/contact_name"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/contactNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contactName"
            android:layout_alignStart="@+id/contactName"
            android:layout_alignBottom="@+id/contactImage"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="0dp"
            android:background="@color/gray"
            android:text="@string/contact_phone"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/contactImage"
            android:layout_width="80dp"
            android:layout_height="86dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/avatar_description"
            app:srcCompat="@drawable/user" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>